--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ Flask==1.1.1
 pymongo==3.0.3
 beautifulsoup4==4.4.1
 requests==2.8.0
+flask-socketio
+eventlet==0.17.4
+gunicorn==18.0.0
 passlib==1.7.2
 uwsgi
