--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==1.1.1
 pymongo==3.0.3
 beautifulsoup4==4.4.1
 requests==2.8.0
-flask-socketio
+flask-socketio==4.2.1
 eventlet==0.25.1
 gunicorn==20.0.4
 passlib==1.7.2
