--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ flask-Bootstrap==3.3.7.1
 wtforms-validators==1.0.0
 email-validator==1.0.5
 flask-cors==3.0.8
-dnspython3==1.15.0
+#dnspython3==1.15.0
