--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pymongo==3.11
 beautifulsoup4==4.4.1
 requests==2.23.0
 flask-socketio==4.3.0
-#eventlet==0.25.2
+eventlet==0.28.0
 gunicorn==20.0.4
 passlib==1.7.2
 uwsgi
