--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ pymongo==3.11.3
 beautifulsoup4==4.4.1
 requests==2.23.0
 flask-socketio==4.3.0
-eventlet==0.28.0
 gunicorn==20.0.4
 passlib==1.7.2
 uwsgi
@@ -15,3 +14,4 @@ email-validator==1.0.5
 flask-cors==3.0.8
 dnspython==2.1.0
 pyOpenssl==20.0.1
+flask-pymongo
