--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 Flask==1.1.2
-pymongo==3.4.0
+pymongo==3.11.3
 beautifulsoup4==4.4.1
 requests==2.23.0
 flask-socketio==4.3.0
 gunicorn==20.0.4
-passlib==1.7.2
+passlib==1.7.4
 uwsgi
 flask-login==0.5.0
 flask-WTF==0.14.3
 flask-Bootstrap==3.3.7.1
 wtforms-validators==1.0.0
 email-validator==1.0.5
-flask-cors==3.0.8
+flask-cors==3.0.10
 dnspython==2.1.0
 pyOpenssl==20.0.1
-flask-pymongo
+flask-pymongo==2.3.0
 eventlet==0.28.0
